fixed img cropping

--- a/css/main.css
+++ b/css/main.css
@@ -72,10 +72,11 @@ body {
 #card-img {
     border: 1px solid lightslategray;
     border-radius: 10px;
-    /* width: 80vw;
-    height: 25vh; */
+    max-height: 30vh;
     box-shadow: 2px 0px 1px 2px rgba(245, 245, 245, 0.6), -2px 0px 1px 2px rgba(245, 245, 245, 0.6), 0px -2px 1px 2px rgba(245, 245, 245, 0.6), 0px 2px 1px 2px rgba(245, 245, 245, 0.6);
     z-index: 5;
+    /* https://alligator.io/css/cropping-images-object-fit/ */
+    object-fit: cover;
 }
 
 #card-name {
